it-tools/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
